# hpclab

./: .gitignore  README.md  config.sh  makefile
conv_cuda/: cudaconv.cpp  makefile  validate.py
conv_cuda/include/: cmdline.h
conv_cuda/lib/: cuconv_cudnn.cpp  cuconv_im2col.cu  cuconv_utils.cpp  walltime.cpp
gemm_avx2/: GEMMwop.cpp  figureout.py  makefile  test.sh
gemm_avx2/include/: GEMM.h
gemm_avx2/lib/: GEMM_fast.cpp  GEMM_kernel4x24_disassembly.S  GEMM_naive.cpp  GEMM_utils.cpp
gemm_avx2_multithread/: makefile
gemm_avx2_multithread/include/: GEMM.h  mytime.h
gemm_avx2_multithread/lib/: GEMM_fast.cpp  GEMM_naive.cpp  GEMM_utils.cpp
gemm_cuda/: GEMMcuda.cpp  figureout.py  makefile
gemm_cuda/include/: cugemm.h
gemm_cuda/lib/: cugemm_fast.cu  cugemm_fast_naive.cu  cugemm_fast_optimiz_1.cu  cugemm_fast_optimiz_2.cu  cugemm_fast_optimiz_3.cu  cugemm_fast_optimiz_4.cu  cugemm_fast_optimiz_5.cu  cugemm_fast_optimiz_6.cu  cugemm_fast_optimiz_7.cu  cugemm_utils.cpp
gemm_cuda/ptx/: cugemm_fast_optimiz_1.ptx  cugemm_fast_optimiz_2.ptx  cugemm_fast_optimiz_6.ptx
hpclab1/: CMakeLists.txt  GEMMwop.cpp  figureout.py  makefile  test.sh
hpclab1/.ipynb_checkpoints/: GEMMwop-checkpoint.cpp  makefile-checkpoint  test-checkpoint.sh
hpclab1/include/: GEMM.h
hpclab1/include/.ipynb_checkpoints/: GEMM-checkpoint.h
hpclab1/lib/: GEMM_fast.cpp  GEMM_kernel8x8_disassembly.S  GEMM_naive.cpp  GEMM_utils.cpp
hpclab1/lib/.ipynb_checkpoints/: GEMM_fast-checkpoint.cpp
hpclab2/: CMakeLists.txt  GEMMmpi_collection.cpp  GEMMmpi_p2p.cpp  GEMMmpi_p2p_async.cpp  makefile
hpclab2/.ipynb_checkpoints/: test-checkpoint.sh
hpclab2/include/: GEMM.h  mytime.h
hpclab2/lib/: walltime.cpp
hpclab3/: CMakeLists.txt  GEMMpthreads.cpp  arraySum.cpp  makefile  montecarlo.cpp  quadraticEquation.cpp  test.sh
hpclab3/include/: GEMM.h  mypthreads_utils.h  mytime.h
hpclab4_12/: CMakeLists.txt  GEMMopenmp.cpp  makefile  test.sh
hpclab4_12/include/: GEMM.h  common_define.h
hpclab4_12/lib/: GEMM_fast.cpp  GEMM_naive.cpp  GEMM_utils.cpp  walltime.cpp
hpclab4_3/: CMakeLists.txt  GEMMparallelfor.cpp  makefile
hpclab4_3/include/: GEMM.h  cmdline.h  mythreads_utils.h  parallelfor.h
hpclab4_3/lib/: GEMM_fast.cpp  GEMM_naive.cpp  parallelfor.cpp
hpclab5/: CMakeLists.txt  heated_plate_mpi.cpp  heated_plate_openmp.c  heated_plate_pf.cpp  heated_plate_pf_cyclic.cpp  heated_plate_pf_wo_thread_pool.cpp  makefile
hpclab5/include/: common_define.h  parallelfor.h
hpclab5/lib/: parallelfor.cpp
hpclab6/: GEMMcuda.cpp  GEMMcuda_mpi.cpp  figureout.py  kernel.cu  makefile  test.sh
hpclab6/include/: cugemm.h
hpclab6/lib/: cugemm_fast.cu  cugemm_fast_naive.cu  cugemm_fast_optimiz_1.cu  cugemm_fast_optimiz_2.cu  cugemm_fast_optimiz_3.cu  cugemm_fast_optimiz_4.cu  cugemm_fast_optimiz_4_plus.cu  cugemm_fast_optimiz_5.cu  cugemm_fast_optimiz_6.cu  cugemm_fast_optimiz_7.cu  cugemm_utils.cpp  walltime.cpp
hpclab6/ptx/: cugemm_fast.ptx  cugemm_fast_naive.ptx  cugemm_fast_optimiz_3.ptx  cugemm_fast_optimiz_4.ptx  cugemm_fast_optimiz_5.ptx  cugemm_fast_optimiz_7.ptx
hpclab6_omp/: GEMMcuda_omp.cpp  makefile
hpclab6_omp/include/: cmdline.h  cugemm.h
hpclab6_omp/lib/: cugemm_fast_kernel.cu  cugemm_fast_multistream.cpp  cugemm_fast_multithread.cpp  cugemm_fast_multithread.cu  cugemm_fast_singlethread.cpp  cugemm_fast_singlethread.cu  cugemm_utils.cpp  walltime.cpp
hpclab7/: cudaconv.cpp  filter.txt  makefile  validate.py
hpclab7/include/: cuconv.h
hpclab7/lib/: cuconv_cudnn.cpp  cuconv_im2col.cu  cuconv_naive.cu
